        [float]
        ===== Breaking changes

        [float]
        ===== Features

        [float]
        ===== Bug fixes

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x

==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

[float]
===== Bug fixes

* Remove the "ancestors" field from a log.trace message on startup. Its info
  is a duplicate of info in the "startTrace" field in the same log record.
  {pull}2005[#2005]

* Remove the accidental `nodejs.eventloop.delay.ns` metric that was always
  reporting a zero value. The existing `nodejs.eventloop.delay.avg.ms` is
  the intended metric. {pull}1993[#1993]


[[release-notes-3.12.1]]
==== 3.12.1 - 2021/02/25

[float]
===== Bug fixes

* fix: Update https://github.com/elastic/apm-nodejs-http-client/blob/master/CHANGELOG.md#v951[apm-server client]
  to fix a {issues}1749[possible crash] when polling for central config.


[[release-notes-3.12.0]]
==== 3.12.0 - 2021/02/21

[float]
===== Features

* feat: Set span outcome to success or failure depending on whether an error
  was captured during when the span was active. {issues}1814[#1814]

* feat: Adds public `setOutcome` method to span and transaction APIs, and
  adds a top level `setTransactionOutcome` and `setSpanOutcome` to set
  outcome values for the current active transaction or active span.
* Limit the `transactionSampleRate` value to 4 decimal places of precision
  according to the shared https://github.com/elastic/apm/blob/master/specs/agents/tracing-sampling.md#transaction_sample_rate-configuration[APM spec]. This ensures that propagated sampling rate
  in the `tracestate` header is short and consistent. {pull}1979[#1979]

[float]
===== Bug fixes

* fix: It was possible for fetching central config to result in the