@@ -240,7 +240,14 @@ class Config {
     if (!this.serviceName) this.serviceName = serviceName
     if (!this.serviceVersion) this.serviceVersion = serviceVersion
 
-    this.logger = logging.createLogger(this.logLevel, this.logger)
+    // The logger is used in config process, so create it first.
+    //
+    // `ELASTIC_APM_LOGGER=false` is provided as a mechanism to *disable* a
+    // custom logger for troubleshooting because a wrapped custom logger does
+    // not get structured log data.
+    // https://www.elastic.co/guide/en/apm/agent/nodejs/current/troubleshooting.html#debug-mode
+    const customLogger = (process.env.ELASTIC_APM_LOGGER === 'false' ? null : this.logger)
+    this.logger = logging.createLogger(this.logLevel, customLogger)
 
     normalize(this, this.logger)
 
